--- a/docs/guide/components/index.adoc
+++ b/docs/guide/components/index.adoc
@@ -36,6 +36,8 @@ include::camel-elasticsearch.adoc[]
 
 include::camel-elsql.adoc[]
 
+include::camel-etcd.adoc[]
+
 include::camel-exec.adoc[]
 
 include::camel-file2.adoc[]
