--- a/docs/guide/components/index.adoc
+++ b/docs/guide/components/index.adoc
@@ -46,6 +46,8 @@ include::camel-exec.adoc[]
 
 include::camel-file2.adoc[]
 
+include::camel-flink.adoc[]
+
 include::camel-freemarker.adoc[]
 
 include::camel-ftp.adoc[]
